# io-omm

./: .gitignore  CMakeLists.txt  CMakeLists.txt.linux  Makefile  README.md  install-dependencies.sh
bench-scripts/: all-ssds.sh  env.sh  hdd-128-ofs.sh  hdd-append.sh  hdd-multi-append.sh  hdd-omap.sh  hdd-osm-append.sh  hdd-osm.sh  hdd.sh  keep_desired_cols.py  log  log_2  log_3  log_4  prebuild.sh  ram-128-ofs.sh  ram-append.sh  ram-multi-append.sh  ram-multiple.sh  ram-omap.sh  ram-osm-append.sh  ram-osm.sh  ram-v128-18-omap-res.csv  ram-v128-n18-ofs-append-res.csv  ram-v4-lvl10-s1-N18-ofs-res.csv  ram-v4-lvl8-s1-N18-ofs-res.csv  ram-v4-lvl9-s1-N18-ofs-nonevic-res.csv  ram-v4-lvl9-s1-N18-ofs-res.csv  ram-v4-n18-osm2-res.csv  ram-v4-n7-osm2-res.csv  ram-v64-lvl8-s1-N18-ofs-res.csv  ram.sh  run-hdds.sh  run-rams.sh  run-ssds.sh  ssd-128-ofs.sh  ssd-ad-v4-16-osm-res.csv  ssd-ad-v4-20-osm-res.csv  ssd-ad-v4-24-osm-res.csv  ssd-append.sh  (+5 more)
bench-scripts/bak/: ram-v4-16-osm-res.csv  ram-v4-lvl10-s1-N18-ofs-nonevic-res.csv  ram-v4-lvl8-s1-N18-ofs-nonevic-res.csv  ram-v4-lvl9-s2-N17-ofs-res.csv  ram-v4-n18-osm-res.csv  ssd-ad-n18-v4-s1-lf1-ofs-res.csv  ssd-ad-v4-23-osm-res.csv
bench-scripts/venv2/: pyvenv.cfg
cmake/: grpc_extras.cmake  toolchain_llvm.cmake
graphers/: blockoram-v1.malloy  scratch.ipynb
graphers/data/: raw-040323.tgz
graphers/data10/: scratch.ipynb
graphers/data11/: scratch.ipynb
graphers/data12/: scratch.ipynb
graphers/data16/: hdd-ad-v128-1-omap-res.csv  hdd-ad-v128-12-omap-res.csv  hdd-ad-v128-13-omap-res.csv  hdd-ad-v128-14-omap-res.csv  hdd-ad-v128-16-omap-res.csv  hdd-ad-v128-19-omap-res.csv  hdd-ad-v128-2-omap-res.csv  hdd-ad-v128-20-omap-res.csv  hdd-ad-v128-21-omap-res.csv  hdd-ad-v128-22-omap-res.csv  hdd-ad-v128-4-omap-res.csv  hdd-ad-v128-5-omap-res.csv  hdd-ad-v128-6-omap-res.csv  hdd-ad-v128-7-omap-res.csv  hdd-ad-v128-9-omap-res.csv  hdd-ad-v128-n11-ofs-append-res.csv  hdd-ad-v128-n14-ofs-append-res.csv  hdd-ad-v128-n17-ofs-append-res.csv  hdd-ad-v128-n20-ofs-append-res.csv  hdd-ad-v128-n23-ofs-append-res.csv  hdd-ad-v128-n5-ofs-append-res.csv  hdd-ad-v128-n8-ofs-append-res.csv  hdd-ad-v128-s24-lf1-ofs-res.csv  hdd-ad-v128-s3-lf128-ofs-res.csv  hdd-ad-v128-s3-lf16-ofs-res.csv  hdd-ad-v32-1-omap-res.csv  hdd-ad-v32-10-omap-res.csv  hdd-ad-v32-12-omap-res.csv  hdd-ad-v32-14-omap-res.csv  hdd-ad-v32-17-omap-res.csv  hdd-ad-v32-19-omap-res.csv  hdd-ad-v32-2-omap-res.csv  hdd-ad-v32-20-omap-res.csv  hdd-ad-v32-23-omap-res.csv  hdd-ad-v32-3-omap-res.csv  hdd-ad-v32-4-omap-res.csv  hdd-ad-v32-5-omap-res.csv  hdd-ad-v32-6-omap-res.csv  hdd-ad-v32-n11-ofs-append-res.csv  hdd-ad-v32-n14-ofs-append-res.csv  (+220 more)
graphers/data17/: hdd-ad-v128-n20-ofs-append-res.csv  hdd-ad-v32-n11-ofs-append-res.csv  hdd-ad-v32-n14-ofs-append-res.csv  hdd-ad-v32-n20-ofs-append-res.csv  hdd-ad-v4096-n5-ofs-append-res.csv  hdd-d-v128-n11-ofs-append-res.csv  hdd-d-v128-n14-ofs-append-res.csv  hdd-d-v128-n17-ofs-append-res.csv  hdd-d-v128-n20-ofs-append-res.csv  hdd-d-v128-n23-ofs-append-res.csv  hdd-d-v32-n11-ofs-append-res.csv  hdd-d-v32-n14-ofs-append-res.csv  hdd-d-v32-n17-ofs-append-res.csv  hdd-d-v32-n20-ofs-append-res.csv  hdd-d-v32-n5-ofs-append-res.csv  hdd-d-v4096-n11-ofs-append-res.csv  hdd-d-v4096-n17-ofs-append-res.csv  hdd-d-v4096-n8-ofs-append-res.csv  ram-v32-n20-ofs-append-res.csv  ram-v32-n23-ofs-append-res.csv  ram-v32-n5-ofs-append-res.csv  ram-v32-n8-ofs-append-res.csv  ram-v4096-n8-ofs-append-res.csv  ssd-ad-v128-n14-ofs-append-res.csv  ssd-ad-v128-n17-ofs-append-res.csv  ssd-ad-v128-n20-ofs-append-res.csv  ssd-ad-v128-n5-ofs-append-res.csv  ssd-ad-v32-n14-ofs-append-res.csv  ssd-ad-v32-n17-ofs-append-res.csv  ssd-ad-v32-n20-ofs-append-res.csv  ssd-d-v128-n17-ofs-append-res.csv  ssd-d-v128-n5-ofs-append-res.csv  ssd-d-v32-n5-ofs-append-res.csv  ssd-d-v4096-n11-ofs-append-res.csv
graphers/data18/: hdd-ad-v128-n23-ofs-append-res.csv  hdd-ad-v32-n23-ofs-append-res.csv  hdd-d-v128-n8-ofs-append-res.csv  hdd-d-v32-n8-ofs-append-res.csv  ram-v128-1-omap-res.csv  ram-v128-13-omap-res.csv  ram-v128-20-omap-res.csv  ram-v128-22-omap-res.csv  ram-v128-23-omap-res.csv  ram-v128-7-omap-res.csv  ram-v128-n20-ofs-append-res.csv  ram-v128-n5-ofs-append-res.csv  ram-v128-n8-ofs-append-res.csv  ram-v32-1-omap-res.csv  ram-v32-16-omap-res.csv  ram-v32-17-omap-res.csv  ram-v32-18-omap-res.csv  ram-v32-19-omap-res.csv  ram-v32-2-omap-res.csv  ram-v32-22-omap-res.csv  ram-v32-23-omap-res.csv  ram-v32-5-omap-res.csv  (+75 more)
mmap_file/: 0
notebooks/: column_filter.py  v1.ipynb
src/: CMakeLists.txt
src/all_in_one/: CMakeLists.txt  pathoram.cc
src/bench/: CMakeLists.txt  build_store_files.cc  csv_headers.cc  locality.cc  ofs-multi-update.cc  ofs-multi.cc  ofs-update.cc  ofs.cc  omap.cc  osm-update.cc  osm.cc  sizes.cc
src/enigmap/: CMakeLists.txt  client.cc  enigmap.cc  enigmap.h
src/length_om/: client.cc  length_om.cc  length_om.h
src/o_file_store/: CMakeLists.txt  client.cc  o_file_store.cc  o_file_store.h
src/path_olm/: CMakeLists.txt  client.cc  path_olm.cc  path_olm.h
src/path_omap/: CMakeLists.txt  client.cc  path_omap.cc  path_omap.h
src/path_oram/: CMakeLists.txt  bak_path_oram.cc  client.cc  path_oram.cc  path_oram.h  path_oram.ht  readme.md
src/path_oram.bak/: client.cc  path_oram.cc  path_oram.h
src/path_osegtree/: CMakeLists.txt  client.cc  path_osegtree.cc  path_osegtree.h
src/path_osm/: CMakeLists.txt  client.cc  path_osm.cc  path_osm.h
src/proto/: CMakeLists.txt  remote_store.proto
src/remote_store/: CMakeLists.txt  async_server.cc  async_server.h  client.cc  common.h  runserver.cc  server.cc  server.h  test_store.cc
src/remote_store/internal/: bench.cpp  common.h  lock_manager.h  mmap_file_store.h  mmap_ram_store.h  posix_single_file_store.h  ram_store.h  store.h
src/server_storage/: CMakeLists.txt  CMakeLists.txt.bak  Makefile  block.cc  block.h  client.cc  local_server.cc  local_server.h
src/utils/: CMakeLists.txt  assert.h  backoff.h  bench.h  bytes.h  crypto.h  crypto_test.cc  csv.h  grpc.h  namegen.h  rlimit.h  trace.h
(+2517 files in other folders)
